Homework 3, report + fixing misha